--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Все официальные ссылки Северной компании: Telegram, Instagram, Яндекс Карты, ВКонтакте, официальный сайт." />
   <meta name="color-scheme" content="light dark" />
   <meta name="theme-color" content="#0A3E91" />
-  <link rel="stylesheet" href="./assets/styles.css?v=blue1" />
+  <link rel="stylesheet" href="./assets/styles.css?v=glass1" />
 </head>
 <body>
   <main class="container">
@@ -75,7 +75,7 @@
       </a>
 
       <!-- Официальный сайт -->
-      <a class="link-card primary" href="https://sk62.ru/" target="_blank" rel="noopener" aria-label="Открыть официальный сайт">
+      <a class="link-card" href="https://sk62.ru/" target="_blank" rel="noopener" aria-label="Открыть официальный сайт">
         <span class="icon" aria-hidden="true">
           <svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 100 20A10 10 0 0012 2zm0 2c1.5 0 3.6 2.8 4 8-4.6 0-7.4-2.3-8.8-4 .9-2.3 2.6-4 4.8-4zm0 16c-1.5 0-3.6-2.8-4-8 4.6 0 7.4 2.3 8.8 4-.9 2.3-2.6 4-4.8 4z"/></svg>
         </span>
@@ -86,11 +86,10 @@
         <span class="chevron" aria-hidden="true">➜</span>
       </a>
     </section>
-    
+
     <!-- Позвонить -->
     <button class="link-card" id="callOpen" type="button" aria-haspopup="dialog" aria-controls="callDialog">
       <span class="icon" aria-hidden="true">
-        <!-- Иконка телефона -->
         <svg viewBox="0 0 24 24">
           <path d="M6.62 10.79a15.05 15.05 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.24 11.36 11.36 0 003.56.57 1 1 0 011 1v3.61a1 1 0 01-1 1A17.91 17.91 0 012 6a1 1 0 011-1h3.61a1 1 0 011 1 11.36 11.36 0 00.57 3.56 1 1 0 01-.24 1.05l-2.32 2.18z"/>
         </svg>
@@ -101,7 +100,7 @@
       </div>
       <span class="chevron" aria-hidden="true">➜</span>
     </button>
-    
+
     <!-- ФУТЕР -->
     <footer class="footer">
       <small>
